@startuml lazy_monad
!include https://raw.githubusercontent.com/ncosta-ic/catppuccin-macchiato-plantuml-theme/main/theme.puml
hide empty members

note "F extends WitnessArity<TypeArity.Unary>\nfor all type classes" as ArityNote

class LazyKindHelper {
 {static} Kind<LazyKind.Witness, A> widen(Lazy<A>)
 {static} Lazy<A> narrow(Kind<LazyKind.Witness, A>)
 ' ...
}

class LazyMonad implements Monad<LazyKind.Witness> {
 + <A, B> @NonNull Kind<LazyKind.Witness, B> map(@NonNull Function<A, B>, @NonNull Kind<LazyKind.Witness, A>)
 + <A> @NonNull Kind<LazyKind.Witness, A> of(@Nullable A)
 + <A, B> @NonNull Kind<LazyKind.Witness, B> ap(@NonNull Kind<LazyKind.Witness, Function<A, B>>, @NonNull Kind<LazyKind.Witness, A>)
 + <A, B> @NonNull Kind<LazyKind.Witness, B> flatMap(@NonNull Function<A, Kind<LazyKind.Witness, B>>, @NonNull Kind<LazyKind.Witness, A>)
}


LazyMonad ..> LazyKindHelper : uses
LazyMonad ..> LazyKind : operates on

@enduml